[package]
name = "dm-simu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dm_simu_rs"
crate-type = ["cdylib"]

[dependencies]
num-complex = "0.4.6"
num-traits = "0.2.18"
numpy = "0.21.0"
pyo3 = "0.21.2"
rand = "0.8.5"
